corrections to kurban

--- a/cuma/kurban.html
+++ b/cuma/kurban.html
@@ -23,47 +23,44 @@
 <h2>Kurban Yakınlıktır</h2>
 <div class=pre>
 Adem oğullarının döktüğü ilk kan, kabul edilmeyen bir kurbanla başlamış:
-<a name="v=5:27&r=qrb&r=qbl">Onlara Âdem'in iki oğluyla ilgili haberi hakkıyla oku. Her ikisi birer kurban sunmuşlardı, birinden kabul edilmiş, diğerinden kabul edilmemişti. (Kurbanı kabul edilmeyen) "Seni öldüreceğim" dedi. Diğeri ise  "Allah, yalnız kendisinden korkanlardan kabul eder" dedi.</a>
-
-Çok farklıydı Adem babamızın devri: Allah, kabul ettiği kurbanı bir yıldırım ile kül ediyor ve Celalini böyle gösteriyordu. Dayanması zor olan bu uygulama sonradan kaldırıldı, kurbanımızın kabul edildiğini bilmiyoruz ama öyle umuyoruz.
+<a name="v=5:27&r=qrb&r=qbl">Onlara Âdem'in iki oğluyla ilgili haberi hakkıyla oku. Her ikisi birer kurban sunmuşlardı, birinden kabul edilmiş, diğerinden kabul edilmemişti. (Kurbanı kabul edilmeyen) "Seni öldüreceğim" dedi. Diğeri ise  "Allah, yalnız kendisinden korkanlardan kabul eder" dedi.</a> [Maide 27]
 
 Peygamber Efendimize, salat ve selam ona, Kevser'in verildiğini haber veren kısacık surede kurban emri çok açık:
-<a name="v=108:2&r=Slw&r=nHr">Rabbin için Namaz kıl ve kurban kes.</a>
+<a name="v=108:2&r=Slw&r=nHr">Rabbin için Namaz kıl ve kurban kes.</a> [Kevser 2]
 
 Et fabrikada yapılmaz, ağaçta yetişmez. Yediğimiz etler <i>kesilen bir canlının parçasıdır</i>. Bunu çocuklarımıza öğretmeliyiz ki et tüketiminde dikkatli davransınlar, israf etmesinler. Kurban bize bu şuuru kazandırdığı için de önemli. Marketten aldığımız etler fabrikadan değil, bu sevimli hayvanlardan geliyor.
-<figure>
-  <img src="./kurban.jpg" alt="koyun">
-</figure>
+
+<figure><img src="./kurban.jpg" alt="koyun"></figure>
 Yılda bir kere et yiyebilen insanlar az değil... Onları düşünerek kurban ibadetine önem vermeli, her yıl şu niyetle kurban kesmeli ve muhtaçlara dağıtmalıyız:
-<a name="v=6:162&r=Slw&r=nsk">"Şüphesiz benim namazım, kurbanım, hayatım ve ölümüm âlemlerin Rabbi Allah içindir."</a>
+<a name="v=6:162&r=Slw&r=nsk">"Şüphesiz benim namazım, kurbanım, hayatım ve ölümüm âlemlerin Rabbi Allah içindir."</a> [En'am 162]
+
+Kurban kesmek yerine para versek daha iyi olmaz mı? Sadaka olur ama kurban yerine geçmez, çünkü o parayı kimse ete harcamaz, et yedirmiş olmayız. Üstelik, peygamberlerin öğrettiği bir ibadetten yoksun kalırız. Marketten et alıp versek et yedirmiş oluruz ama yine kurban olmaz.
 
 Kurban, Hz Muhammed'in icat ettiği bir yenilik değildir. Namaz, oruç, umre ve hac gibi, kurban da çok önceden, Hz Adem zamanından beri uygulanan köklü bir geleneğe dayanır:
-<a name="v=22:34&r=*kr&r=nsk">Her ümmete kurban kesmeyi gerekli kıldık ki kendilerine rızık olarak verdiği hayvanlar üzerine Allah’ın adını ansınlar!</a>
+<a name="v=22:34&r=*kr&r=nsk">Her ümmete kurban kesmeyi gerekli kıldık ki kendilerine rızık olarak verdiği hayvanlar üzerine Allah’ın adını ansınlar!</a> [Hacc 34]
 
 Her olayın ve sözün dikkatle kaydedildiği Veda haccında, Efendimizin kendi eliyle 63 adet kurban kestiğini biliyoruz. "Ne gerek vardı, bir tane yetmez miydi?" itirazını duyar gibiyim. Yetmezdi, çünkü doyurulması gereken on binlerce insan toplanmıştı Mina'da. Elbette zenginler kesecekti ki yoksul çoğunluk bundan faydalansın. Emin olun ki o kurbanların bir gramı bile ziyan edilmemiştir.
 
 1970'lerde Mekke’de durum farklıydı: Soğutma ve nakliye imkanları yeterli olmadığı için binlerce kurbanın israf edildiğini, toprağa gömüldüğünü duyar ve üzülürdük. Geçen 50 yılda durum değişti, artık hacda kesilen kurbanlar doğru yerini buluyor.
 
-Bu vesile ile, hacca gidenlerin kurban kesme zorunluğu olmadığını hatırlatalım. Hac ile umreyi birleştirenler için kurban şart, sadece hacca niyetlenen büyük çoğunluk hacda kurban kesmiyor.
-<a name="v=2:196&r=Emr&r=mtE">Hac ve umreyi Allah için tamamlayın ... her kim hacca kadar umre ile sevab kazanmak isterse, kolayına gelen bir kurban gerekir.</a>
+Bu vesile ile, hacca gidenler için kurban şartı olmadığını hatırlatalım. Hac ile umreyi birleştirenler için kurban kesmek gerekli, ama sadece hacca niyetlenen büyük çoğunluk hacda kurban kesmiyor.
+<a name="v=2:196&r=Emr&r=mtE">Hac ve umreyi Allah için tamamlayın ... her kim hacca kadar umre ile sevab kazanmak isterse, kolayına gelen bir kurban gerekir.</a> [Bakara 196]
 
 Sonuçta neyin önemli olduğunu yine Kitap söylesin:
-<a name="v=22:37&r=wqy&r=nyl">Elbette onların etleri ve kanları Allah'a ulaşmayacaktır. Ancak O'na sizin takvanız erecektir. Onları bu şekilde sizin buyruğunuza verdi ki, size yolunu gösterdiğinden dolayı, Allah'ı tekbir ile yüceltesiniz.</a>
+<a name="v=22:37&r=wqy&r=nyl">Elbette onların etleri ve kanları Allah'a ulaşmayacaktır. O'na ancak sizin takvanız erecektir. Onları bu şekilde sizin buyruğunuza verdi ki, size yolunu gösterdiğinden dolayı, Allah'ı tekbir ile yüceltesiniz.</a> [Hacc 37]
 
-Hangi tekbir? Tavafa başlarken, cemrelere taş atarken, kurbana bıçağı çalarken dile gelen tekbir: <b>Bismillâh Allâhu ekber</b>
+Hangi tekbir? Tavafa başlarken, cemrelere taş atarken, kurbana bıçağı çalarken dile gelen tekbir: <b>Bismillâh, Allâhu ekber</b>
 
 ... ve teşrik (aydınlatma) tekbirleri:
 <b>Allâhu ekber, Allâhu ekber
 Lâ ilâhe illallâhu vallâhu ekber
 Allâhu ekber, velillâhil-hamd</b>
 
-Kurban bayramlarında hatırlanması gereken bir hadis:
-<i>"Hiç bir kul, kurban günü, Allah indinde kan akıtmaktan daha
-sevimli bir iş yapamaz. Öyle ise, onu gönül hoşluğu ile ifa edin."</i>
-(Tirmizi, 827)
-
 </div>
-
+<p>Kurban bayramlarında hatırlanması gereken bir hadis:
+<i>"Hiç bir kul, kurban günü, Allah indinde kan akıtmaktan daha sevimli bir iş yapamaz. Öyle ise, onu gönül hoşluğu ile ifa edin."</i>
+(<a href="https://www.vuslat.org.tr/kurban-ile-ilgili-ayetler-ve-hadisler" target="Kuran">Tirmizî ve İbn Mace</a>)
+</p>
 <p>Dersler 
     <button onclick="location.pathname='/Kitap/ders/'">◀</button>
 </p>
