make folder for images

--- a/cuma/kurban.html
+++ b/cuma/kurban.html
@@ -30,7 +30,7 @@ Peygamber Efendimize, salat ve selam ona, Kevser'in verildiğini haber veren kı
 
 Et fabrikada yapılmaz, ağaçta yetişmez. Yediğimiz etler <i>kesilen bir canlının parçasıdır</i>. Bunu çocuklarımıza öğretmeliyiz ki et tüketiminde dikkatli davransınlar, israf etmesinler. Kurban bize bu şuuru kazandırdığı için de önemli. Marketten aldığımız etler fabrikadan değil, bu sevimli hayvanlardan geliyor.
 
-<figure><img src="./kurban.jpg" alt="koyun"></figure>
+<figure><img src="/Kitap/image/kurban.jpg" alt="koyun"></figure>
 Yılda bir kere et yiyebilen insanlar az değil... Onları düşünerek kurban ibadetine önem vermeli, her yıl şu niyetle kurban kesmeli ve muhtaçlara dağıtmalıyız:
 <a name="v=6:162&r=Slw&r=nsk">"Şüphesiz benim namazım, kurbanım, hayatım ve ölümüm âlemlerin Rabbi Allah içindir."</a> [En'am 162]
 
@@ -55,9 +55,9 @@ Hangi tekbir? Tavafa başlarken, cemrelere taş atarken, kurbana bıçağı çal
 <b>Allâhu ekber, Allâhu ekber
 Lâ ilâhe illallâhu vallâhu ekber
 Allâhu ekber, velillâhil-hamd</b>
-
 </div>
-<p>Kurban bayramlarında hatırlanması gereken bir hadis:
+
+<p>Kurban bayramlarında hatırlanması gereken bir hadis:<br>
 <i>"Hiç bir kul, kurban günü, Allah indinde kan akıtmaktan daha sevimli bir iş yapamaz. Öyle ise, onu gönül hoşluğu ile ifa edin."</i>
 (<a href="https://www.vuslat.org.tr/kurban-ile-ilgili-ayetler-ve-hadisler" target="Kuran">Tirmizî ve İbn Mace</a>)
 </p>
