hac kısmını yayınla

--- a/cuma/kurban.html
+++ b/cuma/kurban.html
@@ -31,10 +31,10 @@ Peygamber Efendimize, salat ve selam ona, Kevser'in verildiğini haber veren kı
 Et fabrikada yapılmaz, ağaçta yetişmez. Yediğimiz etler <i>kesilen bir canlının parçasıdır</i>. Bunu çocuklarımıza öğretmeliyiz ki et tüketiminde dikkatli davransınlar, israf etmesinler. Kurban bize bu şuuru kazandırdığı için de önemli. Marketten aldığımız etler fabrikadan değil, bu sevimli hayvanlardan geliyor.
 
 <figure><img src="/Kitap/image/kurban.jpg" alt="koyun"></figure>
-Yılda bir kere et yiyebilen insanlar az değil... Onları düşünerek kurban ibadetine önem vermeli, her yıl şu niyetle kurban kesmeli ve muhtaçlara dağıtmalıyız:
+Yılda ancak bir kere et yiyebilen insanlar az değil... Onları düşünerek kurban ibadetine önem vermeli, her yıl şu niyetle kurban kesmeli ve muhtaçlara dağıtmalıyız:
 <a name="v=6:162&r=Slw&r=nsk">"Şüphesiz benim namazım, kurbanım, hayatım ve ölümüm âlemlerin Rabbi Allah içindir."</a> [En'am 162]
 
-Kurban kesmek yerine para versek daha iyi olmaz mı? Sadaka olur ama kurban yerine geçmez, çünkü o parayı kimse ete harcamaz, et yedirmiş olmayız. Üstelik, peygamberlerin öğrettiği bir ibadetten yoksun kalırız. Marketten et alıp versek et yedirmiş oluruz ama yine kurban olmaz.
+Kurban kesmek yerine para versek ne olur? Sadaka olur ama kurban yerine geçmez, çünkü o parayı hiç kimse ete harcamaz, et yedirmiş olmayız. Üstelik, bütün peygamberlerin öğrettiği bir ibadetten yoksun kalırız. Marketten et alıp versek et yedirmiş oluruz ama yine kurban olmaz.
 
 Kurban, Hz Muhammed'in icat ettiği bir yenilik değildir. Namaz, oruç, umre ve hac gibi, kurban da çok önceden, Hz Adem zamanından beri uygulanan köklü bir geleneğe dayanır:
 <a name="v=22:34&r=*kr&r=nsk">Her ümmete kurban kesmeyi gerekli kıldık ki kendilerine rızık olarak verdiği hayvanlar üzerine Allah’ın adını ansınlar!</a> [Hacc 34]
@@ -43,8 +43,7 @@ Her olayın ve sözün dikkatle kaydedildiği Veda haccında, Efendimizin kendi 
 
 1970'lerde Mekke’de durum farklıydı: Soğutma ve nakliye imkanları yeterli olmadığı için binlerce kurbanın israf edildiğini, toprağa gömüldüğünü duyar ve üzülürdük. Geçen 50 yılda durum değişti, artık hacda kesilen kurbanlar doğru yerini buluyor.
 
-Bu vesile ile, hacca gidenler için kurban şartı olmadığını hatırlatalım. Hac ile umreyi birleştirenler için kurban kesmek gerekli, ama sadece hacca niyetlenen büyük çoğunluk hacda kurban kesmiyor.
-<a name="v=2:196&r=Emr&r=mtE">Hac ve umreyi Allah için tamamlayın ... her kim hacca kadar umre ile sevab kazanmak isterse, kolayına gelen bir kurban gerekir.</a> [Bakara 196]
+Bu vesile ile, hacca gidenler için <a href="hacc.html#kurban">kurban şartı olmadığını</a> hatırlatalım. Hac ile umreyi birleştirenler için kurban kesmek gerekli, ama sadece hacca niyetlenen büyük çoğunluk hacda kurban kesmiyor.
 
 Sonuçta neyin önemli olduğunu yine Kitap söylesin:
 <a name="v=22:37&r=wqy&r=nyl">Elbette onların etleri ve kanları Allah'a ulaşmayacaktır. O'na ancak sizin takvanız erecektir. Onları bu şekilde sizin buyruğunuza verdi ki, size yolunu gösterdiğinden dolayı, Allah'ı tekbir ile yüceltesiniz.</a> [Hacc 37]
