add navigation buttons

--- a/cuma/hacc.html
+++ b/cuma/hacc.html
@@ -20,7 +20,10 @@
 <body>
 <p class=it>Ayetleri Iqra yazılımında görmek için metin içindeki linklere dokunun.</p>
 
-<h2>Rahman'ın Konukları</h2>
+<h2>Rahman'ın Konukları &ensp;
+<button><a href="#umre">Umre</a></button>
+<button><a href="#arafat">Hac</a></button>
+</h2>
 <div class=pre>
 Kâbe Allah'ın evi (<b>Beytullâh</b>), onu ziyaret edenler de Rahman'ın konuklarıdır (<b>Duyûfur-Rahmân</b>). Bu ziyaret yılda bir kere belli zamanda, milyonlarca Müslüman tarafından, hac ibadeti olarak yerine getirilir. Diğer zamanlarda yapılan ziyarete ise "umre" denir.
 
@@ -54,8 +57,8 @@ Hacdan önce umreye gitmek, yaygın inanışın aksine, tavsiye edilen bir davra
   <figure><img src="https://photos1.blogger.com/img/257/2081/640/kabe2.jpg" alt="Kâbe">Mescid-i Haram, 2000 yılı civarı</figure>
 <b>Umrenin gerekleri</b> dört maddeden iabarettir:
 1. İhram – Helâl olan bazı hareketleri yasaklamak ve telbiye
-2. Tavaf – Kâbe etrafında yedi tur ve ardından iki rekat namaz
-3. Say – Safa ile Merve arasında yedi kere dolaşmak
+2. <a href="#tavaf">Tavaf</a> – Kâbe etrafında yedi tur ve ardından iki rekat namaz
+3. <a href="#say">Say</a> – Safa ile Merve arasında yedi kere dolaşmak
 4. Tıraş – Saçını ustura ile kazıtmak ya da kısaltmak
 
 <h3>1. İhram</h3>
@@ -78,7 +81,7 @@ Umre ya da hac ziyaretine niyet eden kişi kendisine aslında helâl olan bazı 
 
 Meleklere benzemenin bir diğer gereği olarak, erkekler bütün elbiselerini iki parça dikişsiz kumaş ile değiştirirler. Bir parçayı bellerine sarıp ikinciyi omuzlarına örterler. Bu basit beyaz giysi insana kefeni ve ölümü hatırlatır, ihram durumunun şuurunu arttırır. Kadınlarda eldiven ve peçe dışında bir kıyafet yasağı yoktur. Tavaf edenlerin eli ve yüzü görünmelidir.
 
-<h3>2. Tavaf</h3>
+<h3 id=tavaf>2. Tavaf</h3>
 <a name="v=22:26&r=Twf&r=qwm">Sakın bana hiçbir şeyi ortak koşma; tavaf edenler, kıyama duranlar, ruku edenler ve secdeye varanlar için evimi tertemiz et.</a> [Hacc 26]
 
 Kâbe'nin etrafında yedi kere dönüp iki rekat namaz kılmak bir tavaf sayılır. Tavafa başlama ve bitirme yeri Karataşın (Hacer-i Esved) bulunduğu doğu köşesidir. Daima Kâbe'nin sağında kalarak yedi dönüş tamamlanır. Tavafa ara verilmez. Ancak, farz namazların başlaması ile sola dönülüp imama uyulur ve selam ile sağa dönülüp tavafa kalınan yerden devam edilir. Tenha bir zamanda tavaf 10 dakika bile sürmezken, hac zamanında bir saati geçmesi normaldir.
@@ -122,7 +125,7 @@ Taşı öpmek şart değildir, uzaktan selamlamak yeterlidir. Başka bir hadiste
 
 Her ev sahibi konuklarına bir şey ikrâm eder. Rahman'ın ikrâmı da soğutulmuş zemzem suyudur. Kaynağı Kâbe'nin biraz doğusunda yeraltında olan bu su tavaf edenlere güç verir. Caminin her tarafına dağıtılmış binlerce bidon içinde sürekli olarak soğuk zemzem bulunur. Tavaf namazından sonra kana kana içilir. Hz. İsmail bebek iken annesi Hacer ile bu ot bitmeyen vadide Rabbinin emri ile bırakılmıştı. Oğlu için su arayan çaresiz anne iki tepe arasında gidip geliyor, bir canlı izi arıyordu. Bir fiili dua olan bu koşuşmanın ve halis niyetin mükâfatı olarak, bebeğin ayağının dibinde tertemiz su fışkırdı. Bu su sayesinde oraya başka insanlar yerleşti, Mekke şehri kuruldu, önemli bir ticaret merkezi oldu. O günden beri, bu ot bitmez bölgede yalnız zemzem değil, dünyanın her yerinden her çeşit ürün bulunmaktadır. Bu da Mekke’nin mukerrem (ikrâm edilen) sıfatının ve Allah’ın rezzak (rızık veren) isminin maddi boyutudur. <small>2013 inşaatından önce Zemzem kuyusuna inip su doldurabiliyorduk. Bu imkan da artık kalmadı.</small>
 
-<h3>3. Say</h3>
+<h3 id=say>3. Sa'y</h3>
 <a name="v=2:158&r=$Er">Şüphesiz Safa ile Merve Allah'ın nişanelerindendir. Kim Kâbe'yi hacceder veya umre yaparsa, bu ikisini de tavaf etmesinde günah yoktur.</a> [Bakara 158]
 
 Tavaf namazından sonra vakit geçirmeden Kâbe'nin doğu tarafındaki Safa tepesine gidilir. Safa ile 350 metre kuzeyindeki Merve arasında dört kere gidip üç kere gelmek ile Say ibadeti tamamlanır. Safa ve Merve tepelerinde her seferinde Kâbe'ye doğru selam verilir ve tavaftaki gibi Bismillâh Allâhu ekber denilir. Bu tepelerden Kâbe'yi görmek pek mümkün değildir.
@@ -149,13 +152,13 @@ Zilhicce ayının dokuzuncu günü Arafat’ta toplanma, Arefe günüdür. Arefe
 
 <b>Haccın gerekleri</b>, umrenin yukarıda sayılan gereklerine ek olarak 4 maddedir:
 5. Arafat – Arefe günü Arafat düzlüğünde güneş batıncaya kadar durmak
-6. Muzdelife – Bayram gecesi Muzdelife vadisinde gün ağarıncaya kadar durmak
-7. Taşlama – Bayram günleri Mina vadisindeki cemrelere belli sayıda taş atmak
+6. <a href="#muzdelife">Muzdelife</a> – Bayram gecesi Muzdelife vadisinde gün ağarıncaya kadar durmak
+7. <a href="#mina">Mina</a> – Bayram günleri Mina vadisindeki cemrelere belli sayıda taş atmak
 8. <a href="#kurban">Kurban</a> – Bayram günleri Mina’da bir hayvan kesmek (sadece hac ve umreyi birleştirenler için)
 
 <figure><img src="/Kitap/image/harita.jpg" alt="harita"><b>Hac mekanları:</b> Arefe günü Arafat,
 bayram gecesi Muzdelife, bayram günleri Mina</figure>
-Hacca özel üç etkinlik ile bunların özel zaman ve mekânları bundan ibaret. Hac bu kadar basit ve kolay... Bu noktada bir ara verip söz konusu yerlede çekilmiş birkaç fotoğrafa bakalım: <a href="https://www.islamiclandmarks.com/category/makkah-hajj-places" target="KK">Hac mekanları</a>
+Haccın üç etkinliğinin özel zaman ve mekânları bundan ibaret. Hac bu kadar basit ve kolay... Bu noktada bir ara verip söz konusu yerlede çekilmiş birkaç fotoğrafa bakalım: <a href="https://www.islamiclandmarks.com/category/makkah-hajj-places" target="KK">Hac mekanları</a>
 
 Arefe sabahı Mekke’de büyük bir hareket vardır. Bütün taşıt araçları akın akın Arafat’a insan taşır. Arafat’taki toplantı hac ibadetinin başlangıcı olarak çok önemli, ama burada yapılacak iş çok basit: Öğle ve ikindi namazlarını ikişer rekat olarak bir arada kıldıktan sonra düşünmek ve dua etmek, her aklına geldikçe telbiye getirmek:
 
@@ -185,7 +188,7 @@ Güneş iyice alçalınca, ayağa kalkılır ve uzun bir vakfe (ayakta toplu ya 
 
 Arafat’ta yapacağınız dualarınız makbul olsun.
 
-<h3>6. Muzdelife</h3>
+<h3 id=muzdelife>6. Muzdelife</h3>
 Arefe günü güneş batar batmaz hac yolculuğu başlar. Muzdelife’ye doğru bir insan ve taşıt seli... Her ağızda telbiye... İnsanların çoğu yaya olduğu için taşıtlar daha yavaş ilerler. 8-10 km’lik bu yol otobüsle 5-6 saat sürebilir. Güneş batınca Arafat’ta akşam ezanı okunmaz. Akşam namazını Muzdelife’ye kadar geciktirmek gerekir. Yolda ne kadar oyalanılsa bile akşam ve yatsı bir arada bu bölgede kılınır.
 
 <a name="v=2:198&r=*kr&r=hdy">Arafat'tan indiğinizde, Allah'ı Meş'ar-i Haram'da anın; O'nu, size gösterdiği şekilde zikredin.</a> [Bakara 198]
@@ -196,7 +199,8 @@ Muzdelife’nin girişinde el-Meş’aril-Haram olarak Kuran'da geçen bir yer v
 Bundan sonra yapacak bir iş yoktur. Bir kaç saat dinlenmek, düşünmek ve dua etmek. Telbiyeyi de unutmayalım. Gecenin son kısmında ay batar ve hacı adayları yıldızların altında açıkta gecelerler. Etraftaki dev projektörler her yanı aydınlattığı için modern Muzdelife’de karanlığın dehşeti pek hissedilmez, fakat bunu hiç olmazsa hayalen yaşamalıdır. Sabah namazı daha ortalık karanlık iken fecrin ilk vaktinde kılınır. Bundan sonra kısa bir vakfe duası ile ayakta yalvarılır ve yolculuk devam eder.
 
   <figure><img src="/Kitap/image/Muzdalifah.webp" alt="Muzdelife">Muzdelife'de gece</figure>
-<h3>Mina</h3>
+
+<h3 id=mina>Mina</h3>
 Sonraki durağımız Mina. Muzdelife’den Mina’ya sağlığı yerinde olanların yürüyerek gitmesi tavsiye edilir. Alacakaranlıkta lebbeyk seslerinin çınlamasını otobüste duyamazsınız. Zaten cemrelere kadar bütün yol 5 km’dir. Mina’da cemrelere taş atılır, gerekiyorsa kurban kesilir ve tıraş olarak ihramdan çıkılır. Bu görevler “Taş-Baş-Tıraş” şeklinde özetlenir. Hac ibadetinin çoğu böylece tamamlanmış olur, artık “hacı” olmak için sadece ifada tavafı kalır.
 
 <a name="v=2:200&r=*kr">Hac ibadetinizi bitirdiğinizde, babalarınızı andığınız gibi, hatta ondan daha kuvvetli bir anışla Allah'ı anın.</a> [Bakara 200]
