reorder two verses

--- a/cuma/hacc.html
+++ b/cuma/hacc.html
@@ -134,7 +134,7 @@ Tavaf namazından sonra vakit geçirmeden Kâbe'nin doğu tarafındaki Safa tepe
 Birçok bakımdan tavafa benzemesine rağmen, say tavaftan çok farklıdır. Adeta dünyadaki sağa sola koşmamızın ve koşarken sonucu Allah’tan beklememizin bir sembolüdür. Hz. Hacer’in oğlu için su ararken koşuşturmasının bir hatırasıdır. Bu haliyle say dünyadaki insanların gayretini, tavaf ise Arş'ın etrafındaki meleklerin hareketini temsil eder. Say bedene, tavaf ruha hitabeder. Şunu unutmamak gerekir ki, nafile say yapılmaz. Her umre ve her hac için yalnız birer say vardır. Tavaf ise bu dünyadan olmadığı ve ancak Kâbe'nin yanında yapılabildiği için fırsat buldukça tekrarlanır.
 
 <h3>4. Tıraş</h3>
-<a name="v=48:27&r=Hlq&r=qSr">Allah dilerse, güven içinde, başlarınızı tıraş etmiş veya saçlarınızı kısaltmış olarak, korkmadan Mescidi Haram'a gireceksiniz.</a> [Fetih 48]
+<a name="v=48:27&r=Hlq&r=qSr">Allah dilerse, güven içinde, başlarınızı tıraş etmiş veya saçlarınızı kısaltmış olarak, korkmadan Mescidi Haram'a gireceksiniz.</a> [Fetih 27]
 
 Merve tepesinin çıkışında dizi dizi berber dükkanları say ibadetini tamamlayanları bekler. Burada saçlar ya ustura ile tamamen kazıtılır (halk) ya da makas ile bir miktar kısaltılır (taksir). Kadınlar kapalı bir yerde saçlarının ucundan bir tutamı sembolik olarak keserler.
 
@@ -180,8 +180,6 @@ Düzlüğün ortalarında küçük bir tepe vardır. Arefe günü üzüm salkım
 
 Hacı adayları Arafat’ta yarım gün geçirirler. Güneşten korunmak için 40-50 kişilik büyük çadırlar yapılmıştır. Her türlü yiyecek maddesi rahatlıkla bulunabilir. Fakat elbette ki, burası bir piknik alanı değildir. Burada az yemek ve çok dua hacı adayı için daha iyidir. Akşam başlayacak önemli yolculuğa ruhun hazır olması için midenin dolu olmaması çok yararlıdır. Arafat’ta buzlu su ve tuvalet ihtiyaçları da hiç sıkıntıya sebep olmaz. Kaybolma tehlikesine karşı, çadırdan ve gruptan fazla uzaklaşmamak tavsiye edilir.
 
-<a name="v=2:199&r=gfr&r=fyD">Sonra, insanların toplu olarak akın ettiği yerden, siz de akın edin. Allah'tan mağfiret dileyin.</a> [Bakara 199]
-
 Güneş iyice alçalınca, ayağa kalkılır ve uzun bir vakfe (ayakta toplu ya da yalnız dua) yapılır. Artık kalbler iyice yumuşamıştır. Burası pişmanlık, tövbe ve dilekleri arz yeridir.
 
 <a name="v=2:286&r=gfr&r=rHm">Rabbimiz! Unutur veya kasıtsız hata edersek, bizi sorguya çekme! Rabbimiz! Bizden önceki itaatsiz ümmetlere yüklediğin gibi, bize zor bir yük yükleme! Rabbimiz! Gücümüzün yetmediği şeyleri bize taşıtma! Bizi affet, bizi bağışla, bizi esirge!</a> [Bakara 286]
@@ -199,6 +197,7 @@ Muzdelife’nin girişinde el-Meş’aril-Haram olarak Kuran'da geçen bir yer v
 Bundan sonra yapacak bir iş yoktur. Bir kaç saat dinlenmek, düşünmek ve dua etmek. Telbiyeyi de unutmayalım. Gecenin son kısmında ay batar ve hacı adayları yıldızların altında açıkta gecelerler. Etraftaki dev projektörler her yanı aydınlattığı için modern Muzdelife’de karanlığın dehşeti pek hissedilmez, fakat bunu hiç olmazsa hayalen yaşamalıdır. Sabah namazı daha ortalık karanlık iken fecrin ilk vaktinde kılınır. Bundan sonra kısa bir vakfe duası ile ayakta yalvarılır ve yolculuk devam eder.
 
   <figure><img src="/Kitap/image/Muzdalifah.webp" alt="Muzdelife">Muzdelife'de gece</figure>
+<a name="v=2:199&r=gfr&r=fyD">Sonra, insanların toplu olarak akın ettiği yerden, siz de akın edin. Allah'tan mağfiret dileyin.</a> [Bakara 199]
 
 <h3 id=mina>Mina</h3>
 Sonraki durağımız Mina. Muzdelife’den Mina’ya sağlığı yerinde olanların yürüyerek gitmesi tavsiye edilir. Alacakaranlıkta lebbeyk seslerinin çınlamasını otobüste duyamazsınız. Zaten cemrelere kadar bütün yol 5 km’dir. Mina’da cemrelere taş atılır, gerekiyorsa kurban kesilir ve tıraş olarak ihramdan çıkılır. Bu görevler “Taş-Baş-Tıraş” şeklinde özetlenir. Hac ibadetinin çoğu böylece tamamlanmış olur, artık “hacı” olmak için sadece ifada tavafı kalır.
@@ -214,6 +213,8 @@ Mina’nın batı ucunda yüzer metre ara ile üç taş direk vardır. Bunların
 
   <figure><img src="https://photos1.blogger.com/img/257/2081/640/cemre.jpg" alt="">Büyük cemre, 2000 öncesi</figure>
 Bayramın ilk günü sadece büyük cemreye yedi adet taş atılır. Aynı tavaf ve say’da olduğu gibi, her atıştan önce Bismillâh Allâhu ekber denir ve taş atma işi hızla bitirilir. Büyük cemreye taş attıktan sonra dua yoktur, hac telbiyesi burada sona erer. Yalnız hacca niyet edenler hemen tıraş olup ihramdan çıkarlar, diğerleri kurban kesilmesini bekler.
+
+<a name="v=2:203&r=ywm&r=Edd">Sayılı günlerde (eyyam-ı teşrikte) Allah'ı anın. Kim iki gün içinde acele edip (Mina'dan Mekke'ye) dönerse, ona günah yoktur. Kim geri kalırsa ona da günah yoktur.</a> [Bakara 203]
 
 <h3 id=kurban>8. Kurban</h3>
 Hac ile umreyi birleştirenler için <a href="kurban.html">kurban kesmek</a> gerekli, ama sadece hacca niyetlenen büyük çoğunluk hacda kurban kesmiyor.
