correction by cpenbe

--- a/cuma/hacc.html
+++ b/cuma/hacc.html
@@ -90,7 +90,7 @@ Tavaf yeryüzünde ancak Kâbe’nin etrafında yapılabilir. Bu nedenle, Mekke'
 
   <figure><img src="https://photos1.blogger.com/img/257/2081/640/tawaf.jpg" alt="insan seli">Tavaf, insan seli
   <small>Ref: Ali Kazuyoshi Nomachi, <i>Mecca the Blessed, Medina the Radiant</i></small></figure>
-Tavaf edenler Arş'ın çevresindeki meleklere benzerler. Bu meleklerin tek görevi, yaratılış gayesi, hamd ile tesbih ederek Arş'ın etrafında dönmektir. Tavaf için Karataş'ın önündeki çizgiye doğru ilerlenir. Çizgi üzerinde sola doğru dönüp sağ el ile Karataş selamlanır ve Bismillâh Allâhu ekber denilir. Daha sonra her dönüşte bu selamlama tekrarlanır ve aynı şekilde tavaf çizgi üzerinde bitirilir. Namazdan farklı olarak tavaf sırasında konuşulabilir. Fakat zikir ve tesbih ile meşgul olup dua ve Kur'an okumak tavsiye edilir. Tavaf sırasında okunacak belirli bir dua yoktur. Subhânallâh, Elhamdulillâh, Allâhu ekber gibi mübarek kelimelerin tekrarlanması ya da içten gelen dualarla Tanrı'ya yalvarılması uygundur.
+Tavaf edenler Arş'ın çevresindeki meleklere benzerler. Bu meleklerin tek görevi, yaratılış gayesi, hamd ile tesbih ederek Arş'ın etrafında dönmektir. Tavaf için Karataş'ın önündeki çizgiye doğru ilerlenir. Çizgi üzerinde sola doğru dönüp sağ el ile Karataş selamlanır ve Bismillâh Allâhu ekber denilir. Daha sonra her dönüşte bu selamlama tekrarlanır ve aynı şekilde tavaf çizgi üzerinde bitirilir. Namazdan farklı olarak tavaf sırasında konuşulabilir. Fakat zikir ve tesbih ile meşgul olup dua ve Kur'an okumak tavsiye edilir. Tavaf sırasında okunacak belirli bir dua yoktur. Subhânallâh, Elhamdulillâh, Allâhu ekber gibi mübarek kelimelerin tekrarlanması ya da içten gelen dualarla Allah'a yalvarmak uygun olur.
 
 Yedi kere döndükten sonra uygun bir kenarda Kâbe'ye bakarak iki rekat namaz kılınır. Bu namazın İbrahim makamında kılınması şart değildir, herhangi bir yerde olabilir. Güneş doğarken, öğleyin tepedeyken ve batarken herhangi bir namaz kılınmaz. Bu durumlarda tavaf namazını ertelemek gerekir.
 
@@ -168,7 +168,7 @@ innel-hamde ven-ni'mete lek
 vel-mulke lâ şerîke lek</b>
 <i>Buyur Allahım, geldim, ortağın yok Senin, buyur.
 Hamd Senin, nimet Senin, mülkte ortağın yok Senin.</i>
-<small>Telbiye (vigülün yerini değiştirerek) böyle de okunabilir</small>
+<small>Telbiye (virgülün yerini değiştirerek) böyle de okunabilir</small>
 
 <h3>5. Arafat</h3>
 Arafat dağların arasında geniş bir düzlüktür. Kâbe’nin 20 km kadar doğusunda, biraz daha yüksekte... Bu yüzden "Arafat’a çıkmak" denir. 1990’dan sonra başlayan ağaçlandırma çalışmaları sonuç vermeye başlamış ve Arafat düzlüğü epeyce yeşermiştir. Arafat’taki tek bina, bir kısmı Arafat’ın dışında sayılan Nemire Mescidi'dir. On binlerce kişi alan bu cami yılda sadece bir kere kullanılır. Diğer zamanlarda ise kapalı ve ıssız...
