--- a/ders/index.html
+++ b/ders/index.html
@@ -43,6 +43,7 @@
 <h3>Alıntılar</h3>
 <p>Yazılımı uygulayan web sayfaları</p>
 <ol>
+  <li><a href="/Kitap/rama/">Ramazan 2021 notları</a>
   <li><a href="/Kitap/cuma/adalet.html"><small>Adalet ve ibadet (Karabaşoğlu)</small></a>
   <li><a href="/Kitap/cuma/geylani.html">Letters of Abdulqadir Geylani</a>
   <li><a href="/Kitap/cuma/quest.html">Self-Knowledge (A Zaman)</a>
@@ -51,7 +52,7 @@
   <!-- <li><a href="/Kuran/benzerlik.html" target=KK>Benzerlik örnekleri</a> -->
 </ol>
 </div>
-<div class=gap></div>
+<!-- <div class=gap></div> -->
 <div class=narrow>
 <h3>Cuma Dersleri</h3>
 <p>Muhtelif konularda çalışma sayfaları</p>
