--- a/ders/01.html
+++ b/ders/01.html
@@ -17,23 +17,26 @@
 
 <h3>Özne, Nesne, Tümleç</h3>
 
-<pre><a name="v=83:20&r=ktb">kitâbun</a>   <a name="v=2:2&r=ktb">el-kitâbu</a>    u (özne hâli)
+<pre>
+<a name="v=83:9&r=ktb">kitâbun</a>   <a name="v=2:2&r=ktb">el-kitâbu</a>    u (özne hâli)
 <a name="v=46:30&r=ktb">kitâben</a>   <a name="v=2:121&r=ktb">el-kitâbe</a>    e (nesne hâli)
 <a name="v=56:78&r=ktb">kitâbin</a>   <a name="v=29:45&r=ktb">el-kitâbi</a>    i (tümleç hâli)
 </pre>
 <p>Her satırdaki ilk kelime belirsiz hâldedir ve sonunda tenvin (nunlama) vardır. İkinci kelime ise İngilizce <b>the</b> gibi <b>el</b> takısı ile belirlenmiştir.</p>
 
 <p>Belirsizlik göstergesi olan tenvin, sıfat ve özel isimler için de kullanılır. Kelime sonunda duruluyorsa, son ses ("u", "un") düşer ve okunmaz. </p>
-<pre><a name="v=56:77&r=krm">kerîm</a>(un)
+<pre>
+<a name="v=56:77&r=krm">kerîm</a>(un)
 <a name="v=33:70&r=sdd">sedîd</a>(en)
-<a name="v=61:6&r=smw">Ahmed</a>(un)
-<a name="v=47:2&r=nzl">Muhammed</a>(in)
+<a name="v=26:142&r=SlH">Sâlih</a>(un)
+<a name="v=47:2&r=Hmd">Muhammed</a>(in)
 </pre>
 
-<h3>Allah ismi</h3>
+<h3>Allah ismi — <a href="Allah.html">Lafza-i Celâl</a></h3>
 
-<p>Hem Kuran'da hem de günlük konuşmada açık ara en çok kullanılan kelimenin üç hali:</p>
-<pre><a name="v=3:95&r=Sdq">sadaqallah</a>(u)     Allah doğru dedi
+<p>Hem Kuran'da hem de günlük konuşmada açık ara <a href="yaygin.html">en çok kullanılan</a> kelimenin üç hali:</p>
+<pre>
+<a name="v=3:95&r=Sdq">sadaqallah</a>(u)     Allah doğru dedi
 <a name="v=2:194&r=wqy">vettaqullâh</a>(e)    Allah'tan sakının
 <a name="v=27:30&r=smw">bismillâh</a>(i)      Allah'ın adıyla
 <a name="v=2:156&r=rjE">innâ lillâh</a>(i)    Allah'a aitiz
@@ -42,7 +45,8 @@
 <h3>İsim tamlaması</h3>
 
 <p>Kelime sırası (Türkçe'nin tersine) önce <i>tamlanan</i>, sonra <i>tamlayan</i> şeklindedir. Başka bir ek ya da edat kullanmadan, tamlayan tümleç halinde sona eklenir. Tamlanan kelimede <b>el</b> takısı yoktur, ama tamlama belirlidir.</p>
-<pre><a name="v=48:10&r=ydy">yedullah</a>(i)       Allah'ın eli
+<pre>
+<a name="v=48:10&r=ydy">yedullah</a>(i)       Allah'ın eli
 <a name="v=3:73&r=ydy">biyedillah</a>(i)     Allah'ın elinde
 
 <a name="v=97:2&r=lyl">mâ leyletul-qadr</a>(i)   Kadir gecesi nedir?
