--- a/ders/03.html
+++ b/ders/03.html
@@ -18,29 +18,29 @@
 <p>Nitelediği isimden sonra, o isimle aynı halde kullanılır.</p>
 
 <pre>
-<a name="v=36:61&r=qwm">sirâtun mustaqîmun</a>    dosdoğru bir yol
-<a name="v=1:6&r=qwm">es-sirâtal-mustaqîme</a>  dosdoğru yol
-<a name="v=56:77&r=krm">lequr-ânun kerîmun</a>    kerim bir okuma
-<a name="v=36:2&r=krm">vel-qur-ânil-hakîm</a>    hikmetli Kuran
-<a name="v=33:70&r=sdd">qavlen sedîden</a>        doğru bir söz
+<a name="v=36:61&r=qwm">sirâtun mustaqîmun</a>     dosdoğru bir yol
+<a name="v=1:6&r=qwm"  >es-sirâtal-mustaqîme</a>   dosdoğru yol
+<a name="v=56:77&r=krm">lequr-ânun kerîmun</a>     kerim bir okuma
+<a name="v=36:2&r=krm" >vel-qur-ânil-hakîm</a>     hikmetli Kuran
+<a name="v=33:70&r=sdd">qavlen sedîden</a>         doğru bir söz
 </pre>
 
 <h3>Zamir</h3>
 
 <p>Zamirler aynı isimler gibi tamlama yaparlar.</p>
 <pre>
-kitâbî        benim kitabım
-kitâbeke      senin kitabını
-rabbuhû       onun  rabbi
-fî beytihâ    onun (F) evinde
-rabbenâ       bizim rabbimiz
-dînukum       sizin dininiz
-lirabbihim    onların rablerine
-ezvâcuhunne   onların (F) eşleri
+<a name="v=27:28&r=ktb">kitâbî</a>         benim kitabım
+<a name="v=17:14&r=ktb">kitâbeke</a>       senin kitabını
+<a name="v=2:131&r=rbb">rabbuhû</a>        onun  rabbi
+<a name="v=3:37&r=rbb" >rabbuhâ</a>        onun (F) rabbi
+<a name="v=2:201&r=rbb">rabbenâ</a>        bizim rabbimiz
+<a name="v=109:6&r=dyn">dînukum</a>        sizin dininiz
+<a name="v=25:64&r=rbb">lirabbihim</a>     onların rablerine
+<a name="v=12:50&r=ydy">eydiyehunne</a>    onların (F) elleri
 
-<a name="v=7:16&r=qwm">sirâtakel-mustaqîm</a>(e)   dosdoğru yolun
-<a name="v=12:95&r=qdm">fî dalâlikel-qadîm</a>(i)   eski şaşkınlığında
-rasûluhul-kerîm(u)      kerim elçisi
+<a name="v=7:16&r=qwm" >sirâtakel-mustaqîm</a>   Sen'in dosdoğru yolun
+<a name="v=12:95&r=qdm">fî dalâlikel-qadîm</a>   senin eski şaşkınlığın
+rasûluhul-kerîm      O'nun kerim elçisi
 </pre>
 
 <h3>Fatiha</h3>
