--- a/ders/04.html
+++ b/ders/04.html
@@ -58,7 +58,7 @@ ahirette de iyilik ver
 <h3>Tahiyyât</h3>
 
 <p></p>
-<pre>et-tahiyyâtu lillâhi ves-salavâtu vet-tayyibât
+<pre>et-<a name="v=33:44&r=slm&r=Hyy">tahiyyâtu</a> lillâhi ves-<a name="v=23:9&r=Slw">salavâtu</a> vet-<a name="v=17:70&r=Tyb">tayyibât</a>
 Bütün tahiyyât, salavât, tayyibât Allah'ın
 
 es-selâmu 'aleyke <a name="v=66:9&r=nbA">yâ eyyuhen-nebiyyu</a>
