--- a/ders/isimler.html
+++ b/ders/isimler.html
@@ -24,8 +24,10 @@ Lakin bazı eksikler var: Mesela <b>'Âd</b> türetilmiş sayılırken <b>Semûd
 "use strict";
 const DATA =
 `'Adn	Eadon	9:72 13:23 16:31 18:31 19:61 20:76 35:33 38:50 40:8 61:12 98:8
+'Âd	EaAdN	7:65 7:74 9:70 11:50 11:59 11:60 14:9 22:42 25:38 26:123 29:38 38:12 40:31 41:13 41:15 46:21 50:13 51:41 53:50 54:18 69:4 69:6 89:6
 'Arafât	Earafa%60t	2:198
 Âzer	A^zar	6:74
+Ba'l	baEol	37:125
 Bâbil	baAbil	2:102
 Bedr	bador	3:123
 Bekke	bak~ap	3:96
@@ -43,6 +45,8 @@ Huneyn	Hunayon	9:25
 'İmrân	Eimora%60n	3:33 3:35 66:12
 İncîl	<injiyl	3:3 3:48 3:65 5:46 5:47 5:66 5:68 5:110 7:157 9:111 48:29 57:27
 İrem	<iram	89:7
+Kâbe	kaEobap	5:95 5:97
+Kâfûr	kaAfuwr&r=kawovar&r=tasoniym	76:5 Kevser 108:1 Tesnîm 83:27
 Lazâ	laZaY%60	70:15
 Lukmân	luqoma%60n	31:12 31:13
 Medyen	madoyan	7:85 9:70 11:84 11:95 20:40 22:44 28:22 28:23 28:45 29:36
@@ -70,10 +74,6 @@ Yesrib	yavorib	33:13
 Zencebîl	salosabiyl	76:17 Selsebîl 76:18
 Zeyd	zayod	33:37
 Kökü olan özel isimler
-'Âd	Ewd	7:65 7:74 9:70 11:50 11:59 11:60 14:9 22:42 25:38 26:123 29:38 38:12 40:31 41:13 41:15 46:21 50:13 51:41 53:50 54:18 69:4 69:6 89:6
-Ba'l	bEl	37:125
-Kâbe	kEb	5:95 5:97
-Kâfûr	kfr&r=kvr&r=snm	76:5 Kevser 108:1 Tesnîm 83:27
 Kur'ân	qrA	2:185 4:82 5:101 6:19 7:204 9:111 10:15 10:37 10:61 12:2 12:3 13:31 15:1 15:87 15:91 16:98 17:9 17:41 17:45 17:46 17:60 17:78 17:82 17:88 17:89 17:106 18:54 20:2 20:113 20:114 25:30 25:32 27:1 27:6 27:76 27:92 28:85 30:58 34:31 36:2 36:69 38:1 39:27 39:28 41:3 41:26 41:44 42:7 43:3 43:31 46:29 47:24 50:1 50:45 54:17 54:22 54:32 54:40 55:2 56:77 59:21 72:1 73:4 73:20 75:17 75:18 76:23 84:21 85:21
 Zebûr	zbr	4:163 17:55 21:105
 Sâmiriy	smr	20:85 20:87 20:95`
