--- a/ders/isimler.html
+++ b/ders/isimler.html
@@ -18,8 +18,7 @@
 <p>Dersler <button class=goBack>◀</button>
 <br><br>
 </p>
-<p><small>Tabloyu hazırlarken corpus.quran.com verilerini kullandık.
-Lakin bazı eksikler var: Mesela <b>'Âd</b> türetilmiş sayılırken <b>Semûd</b> özel isim olmuş.  Cennet pınarlarından <b>Selsebîl</b> özel, <b>Kevser</b> cins isim sayılmış; <b>Zencebîl</b> hiç sayılmamış. Keza <b>tennûr</b> kelimesinin kökü belirsiz. <b>Zebûr</b> ve <b>Kur'an</b> kelimeleri de cins isim sayılmış.</small><br></p>
+<p>Tabloyu hazırlarken corpus.quran.com verilerinde birkaç değişiklik yaptık: Corpus'da kökü belirtilen <b>'Âd, Ba'l, Kâ'be, Kâfûr, Kevser, Tesnîm</b> ile kökü belirtilmeyen <b>Zencebîl</b> özel isim sayıldı.</p>
 <script>
 "use strict";
 const DATA =
@@ -35,7 +34,6 @@ Câlût	jaAluwt	2:249 2:250 2:251
 Cehennem	jahan~am	2:206 3:12 3:162 3:197 4:55 4:93 4:97 4:115 4:121 4:140 4:169 7:18 7:41 7:179 8:16 8:36 8:37 9:35 9:49 9:63 9:68 9:73 9:81 9:95 9:109 11:119 13:18 14:16 14:29 15:43 16:29 17:8 17:18 17:39 17:63 17:97 18:100 18:102 18:106 19:68 19:86 20:74 21:29 21:98 23:103 25:34 25:65 29:54 29:68 32:13 35:36 36:63 38:56 38:85 39:32 39:60 39:71 39:72 40:49 40:60 40:76 43:74 45:10 48:6 50:24 50:30 52:13 55:43 58:8 66:9 67:6 72:15 72:23 78:21 85:10 89:23 98:6
 Cibrîl	jiboriyl	2:97 2:98 66:4
 Cûdiy	juwdiY~	11:44
-el-Lât	{ll~a%60t&r={loEuz~aY%60&r=manaw%60p	el-'Uzzâ 53:19 Menât 53:20
 Firavun	firoEawon	2:49 2:50 3:11 7:103 7:104 7:109 7:113 7:123 7:127 7:130 7:137 7:141 8:52 8:54 10:75 10:79 10:83 10:88 10:90 11:97 14:6 17:101 17:102 20:24 20:43 20:60 20:78 20:79 23:46 26:11 26:16 26:23 26:41 26:44 26:53 27:12 28:3 28:4 28:6 28:8 28:9 28:32 28:38 29:39 38:12 40:24 40:26 40:28 40:29 40:36 40:37 40:45 40:46 43:46 43:51 44:17 44:31 50:13 51:38 54:41 66:11 69:9 73:15 73:16 79:17 85:18 89:10
 Firdevs	firodawos	18:107 23:11
 Hâmân	ha%60ma%60n	28:6 28:8 28:38 29:39 40:24 40:36
@@ -45,8 +43,11 @@ Huneyn	Hunayon	9:25
 'İmrân	Eimora%60n	3:33 3:35 66:12
 İncîl	<injiyl	3:3 3:48 3:65 5:46 5:47 5:66 5:68 5:110 7:157 9:111 48:29 57:27
 İrem	<iram	89:7
-Kâbe	kaEobap	5:95 5:97
+Kâ'be	kaEobap	5:95 5:97
 Kâfûr	kaAfuwr&r=kawovar&r=tasoniym	76:5 Kevser 108:1 Tesnîm 83:27
+Kârûn	qa%60ruwn	28:76 28:79 29:39 40:24
+Kureyş	qurayo$	106:1
+Lât	la%60t&r=Euz~aY%60&r=manaw%60p	'Uzzâ 53:19 Menât 53:20
 Lazâ	laZaY%60	70:15
 Lukmân	luqoma%60n	31:12 31:13
 Medyen	madoyan	7:85 9:70 11:84 11:95 20:40 22:44 28:22 28:23 28:45 29:36
@@ -54,24 +55,22 @@ Mekke	mak~ap	48:24
 Meryem	maroyam	2:87 2:253 3:36 3:37 3:42 3:43 3:44 3:45 4:156 4:157 4:171 5:17 5:46 5:72 5:75 5:78 5:110 5:112 5:114 5:116 9:31 19:16 19:27 19:34 23:50 33:7 43:57 57:27 61:6 61:14 66:12
 Mesîh	masiyH	3:45 4:157 4:171 4:172 5:17 5:72 5:75 9:30 9:31
 Mîkâl	miykaY%60l	2:98
-Kârûn	qa%60ruwn	28:76 28:79 29:39 40:24
-Kureyş	qurayo$	106:1
 Ramadân	ramaDaAn	2:185
 Rûm	r~uwm	30:2
 Safâ	S~afaA&r=marowap	Merve 2:158
-Sebe	saba<	27:22 34:15
 Sakar	saqar	54:48 74:26 74:27 74:42
+Sebe	saba<	27:22 34:15
+Semûd	vamuwd	7:73 9:70 11:61 11:68 11:95 14:9 17:59 22:42 25:38 26:141 27:45 29:38 38:13 40:31 41:13 41:17 50:12 51:43 53:51 54:23 69:4 69:5 85:18 89:9 91:11
 Seynâ	sayonaA^'&r=siyniyn	23:20 Sînîn 95:2
 Tâlût	TaAluwt	2:247 2:249
 Tevrât	t~aworaY%60p	3:3 3:48 3:50 3:65 3:93 5:43 5:44 5:46 5:66 5:68 5:110 7:157 9:111 48:29 61:6 62:5
 Tubba'	tub~aE	44:37 50:14
 'Uzeyr	Euzayor	9:30
-Semûd	vamuwd	7:73 9:70 11:61 11:68 11:95 14:9 17:59 22:42 25:38 26:141 27:45 29:38 38:13 40:31 41:13 41:17 50:12 51:43 53:51 54:23 69:4 69:5 85:18 89:9 91:11
-Vedd	yaEuwq&r=yaguwv	Suvâ' Yegûs Ye'ûk Nesr 71:23
+Vedd	wdd&r=yaguwv&r=nsr	Suvâ' Yegûs Ye'ûk Nesr 71:23
 Yehûdiy	yahuwdiy~	2:113 2:120 3:67 5:18 5:51 5:64 5:82 9:30
 Yecûc	ya>ojuwj&r=ma>ojuwj	Mecûc 18:94 21:96
 Yesrib	yavorib	33:13
-Zencebîl	salosabiyl	76:17 Selsebîl 76:18
+Zencebîl	salosabiyl&r=zanjabiyl	76:17 Selsebîl 76:18
 Zeyd	zayod	33:37
 Kökü olan özel isimler
 Kur'ân	qrA	2:185 4:82 5:101 6:19 7:204 9:111 10:15 10:37 10:61 12:2 12:3 13:31 15:1 15:87 15:91 16:98 17:9 17:41 17:45 17:46 17:60 17:78 17:82 17:88 17:89 17:106 18:54 20:2 20:113 20:114 25:30 25:32 27:1 27:6 27:76 27:92 28:85 30:58 34:31 36:2 36:69 38:1 39:27 39:28 41:3 41:26 41:44 42:7 43:3 43:31 46:29 47:24 50:1 50:45 54:17 54:22 54:32 54:40 55:2 56:77 59:21 72:1 73:4 73:20 75:17 75:18 76:23 84:21 85:21
