--- a/rama/index.html
+++ b/rama/index.html
@@ -79,7 +79,7 @@
   </ol>
 
 <p>Bu konuların hemen hepsi önceki Ramazan'da blog olarak yayınlanmıştı. 
-Bu sene, Iqra4 yazılımı sayesinde Kuran ile iç içe...
+Bu sene (2021) Iqra4 yazılımı sayesinde Kuran ile iç içe...
 </p>
 
 <p>Evde geçireceğimiz ikinci Ramazan mevsimini yine Kuran kelimeleri ile süsleyelim. 
