--- a/ders/index.html
+++ b/ders/index.html
@@ -44,6 +44,7 @@
 <p>Yazılımı uygulayan web sayfaları</p>
 <ol>
   <li><a href="/Kitap/rama/">Ramazan 2021 notları</a>
+  <li><a href="/Kitap/esma/">Ramazan 2023 notları</a>
   <li><a href="/Kitap/cuma/adalet.html"><small>Adalet ve ibadet (Karabaşoğlu)</small></a>
   <li><a href="/Kitap/cuma/geylani.html">Letters of Abdulqadir Geylani</a>
   <li><a href="/Kitap/cuma/quest.html">Self-Knowledge (A Zaman)</a>
