--- a/esma/index.html
+++ b/esma/index.html
@@ -14,7 +14,7 @@
       padding: 0 10px;
       margin: auto;
       font: 15px/1.4 sans-serif;
-      background: #dfd;
+      background: #eef;
     }
     ol {
       display: inline-block;
@@ -84,8 +84,6 @@
   <li>28. el-Ganî, el-Hamîd
   <li>29. zul-celâli vel-ikrâm
 </ol>
-<p>
-</p>
 <script src="init.js"></script>
   </body>
 </html>
