--- a/esma/index.html
+++ b/esma/index.html
@@ -51,7 +51,7 @@
 <p>Hicri 1444 (2023) Ramazan ayında her gün iki güzel isim hatırlayalım ve Kitap'taki yerini bulalım.
 </p>
 <ol id="bir">
-  <li><b>Allâh</b> celle celâluh
+  <li><a href="/Kitap/esma/Allah.html"><b>Allâh</b> celle celâluh</a>
   <li>1. er-Rahmân, er-Rahîm
   <li>2. el-Mâlik, el-Melik
   <li>3. el-Kuddûs, es-Selâm
