add Back button

--- a/esma/Allah.html
+++ b/esma/Allah.html
@@ -48,20 +48,20 @@
   </style>
   <body>
 
-<h3>Allâh celle celâluh</h3>
+<h3>Allâh celle celâluh &emsp;<button class=goBack>◀</button></h3>
 
 <p>Kitabımızda en sık geçen kelime <a href="../ders/Allah.html">lafza-i celâl</a> denilen "Allah" sözüdür. Bu kelimenin yazılışı ve okunuşu kural dışıdır: lâm-lâm-hâ birleştirilir ve tek bir sembol olarak yazılır. Her yerde ince okunan lâm burada kalın bir ses verir.
 <!-- <img src="/Kitap/image/Lafza.jpg" alt="Allah lafzı"> -->
 
 <p>Allah kelimesi iyelik ve çoğul eki kabul etmez. Birdir, tekdir. Kelimenin nasıl kullanıldığına birkaç ayetle örnek verelim:
 <p>1. Tur dağında genç bir çoban. Ailesiyle giderken yolu kaybediyor. Dağdaki ışık çağırıyor ve yaklaşınca şu hitabı duyuyor:
-<img src="./image/inneniy enallah.jpg" alt="inneniy enallah"></p>
+<img style="width:250px" src="./image/inneniy enallah.jpg" alt="inneniy enallah"></p>
 <p>20:14 <a name="v=20:14">innenî enallâhu lâ ilâhe illâ ene</a><br> 
 <i>Benim, Ben Allah, Benden başka ilâh yok</i></p>
 <p>Hz Musa ilk tevhid dersini kayınpederinden almıştı. İkinci ders bu ürkütücü nida oldu. Asıl imtihan işte tam orada başladı: Önce zulüm üstüne kurulan Firavun düzenine karşı, sonra putlar arayan kendi kavmine karşı mücadele sürdü gitti.</p>
 <br>
 <p>2. Kudüs'te yaşlı bir din adamı. Allah'a adanmış yeğeni Meryem'i görüp ona imreniyor. Melekler bir çocuk müjdeleyince şaşırıyor. Meleklerin cevabında şu emir var:
-<img src="./image/vezkur rabbeke.jpg" alt="vezkur rabbeke"></p>
+<img style="width:250px" src="./image/vezkur rabbeke.jpg" alt="vezkur rabbeke"></p>
 <p>3:41 <a name="v=3:41&r=*kr&r=rbb&r=kvr">veżkur rabbeke keśîran</a> 
 <i>Rabbini çok zikret </i><br>
 (Bu ayette lafza-i celal yok, 5. nota bakın)</p>
