--- a/esma/Rahman.html
+++ b/esma/Rahman.html
@@ -48,7 +48,7 @@
   </style>
   <body>
 
-<h3>er-Rahmân, er-Rahîm</h3>
+<h3>er-Rahmân, er-Rahîm &emsp;<button class=goBack>◀</button></h3>
 
 <p>Meşhur Ramazan hadisi "Evveli rahmet..." diye başlar. Ramazan'ın ve Kuran'ın evveli <b>Rahmet</b>'tir, çünkü besmele sadece rahmettir:
 <img src="./image/Batanay_besmele.jpg" alt="besmele"></p>
@@ -64,7 +64,7 @@ Demek ki Rahmân, kendi nefsine yazdığı rahmetinin gereği olarak Kuran'ı ö
 33:43 <a name="v=33:43&r=rHm">vekâne bilmu-minîne rahîmâ</a><br>
 Yani "Rahîm" ismi ancak ona layık olan müminler için...</p>
 <br>
-<p>Bu iki rahmet ismi yan yana altı ayette geçiyor:
+<p>Bu iki rahmet ismi altı ayette yan yana geçiyor:
 <img style="width:100%" src="./image/errahman errahim.png" alt="iki isim yan yana"></p>
 <p>Dördünde "<i>errahmân, errahîm</i>" i halinde:<br>
 41:2 <a name="v=41:2&r=rHm">minerrahmânirrahîm</a><br>
