--- a/esma/index.html
+++ b/esma/index.html
@@ -52,7 +52,7 @@
 </p>
 <ol id="bir">
   <li><a href="/Kitap/esma/Allah.html"><b>Allâh</b> celle celâluh</a>
-  <li>1. er-Rahmân, er-Rahîm
+  <li>1. <a href="/Kitap/esma/Rahman.html">er-Rahmân, er-Rahîm</a>
   <li>2. el-Mâlik, el-Melik
   <li>3. el-Kuddûs, es-Selâm
   <li>4. el-Mu'min, el-Muheymin
